--- a/views/config_booking_renting_notifications_customer_templates.erb
+++ b/views/config_booking_renting_notifications_customer_templates.erb
@@ -13,7 +13,7 @@
         <div class="block">
           <ul class="nav nav-tabs" data-toggle="tabs">
             <li class="active">
-              <a id="request_notification" href="#btabs-static-request"><%=t.booking_configuration_templates.email_customer_request_received%></a>
+              <a id="request_notification" href="#btabs-static-request"><%=t.booking_settings.notifications.email_customer_request_received%></a>
             </li>
             <li class="">
               <a id="confirmation_notification" href="#btabs-static-confirmation"><%=t.booking_settings.notifications.email_customer_reservation_confirmed%></a>
@@ -31,7 +31,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -51,7 +51,7 @@
                   <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="block block-bordered">
                       <div class="block-header bg-gray-lighter">
-                        <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                        <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                       </div>
                       <div class="block-content block-content-narrow">
                         <div id="request_notification_container">
@@ -67,7 +67,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -83,7 +83,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                                <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="confirmation_notification_container">
@@ -104,7 +104,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -120,7 +120,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                                <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="request_pay_now_notification_container">
@@ -140,7 +140,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -156,7 +156,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                                <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="pay_enabled_notification_container">
