--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -130,62 +130,8 @@
      </div> 
 
       <%= partial :booking_management_header, locals: {booking_item_family: booking_item_family,
-                                                  multiple_rental_locations: multiple_rental_locations,
-                                                  driver_min_age_rules: driver_min_age_rules} %>
-
-
-
-
-      <div class="row">
-        <div class="col-lg-3">
-          <div class="block  text-center">
-            <div class="block-header bg-gray-lighter">
-                <h3 class="block-title">Estado</h3>
-            </div>
-            <div class="block-content block-content-full">
-                <%= partial :booking_management_workflow %>
-            </div>
-          </div>
-        </div>
-        <% if @addon_sales_channels %>
-        <div class="col-lg-3">
-          <div class="block  text-center">
-            <div class="block-header bg-gray-lighter">
-                <h3 class="block-title">Canal de venta</h3>
-            </div>
-            <div class="block-content block-content-full">
-              <form name="sales_channel_form" class="form-inline">
-                <input type="hidden" name="id" value="<%%=entity.id%>"/>
-                <div class="form-group">
-                  <select name="sales_channel_code" id="sales_channel_code" class="form-control">
-                    <option value="">Estándar</option>
-                    <% @sales_channels.each do |sales_channel| %>
-                    <option value="<%=sales_channel.code%>" <%% if (entity.sales_channel_code == '<%=sales_channel.code%>') {%>selected<%%}%>><%=sales_channel.name%></option>
-                    <% end %>
-                  </select>
-                </div>
-            <div class="navigation-bar bottom-margin" style="display:none">
-              <div id="customer_error_summary" class="alert alert-danger" style="display: none; margin: 10px"></div>
-              <div class="navigation-bar-crud-buttons right-float right-margin">
-                <input type="submit" class="btn btn-primary update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
-              </div>
-            </div>
-              </form>
-            </div>
-          </div>
-        </div>
-        <% end %>
-        <div class="col-lg-6">
-          <div class="block  text-center">
-            <div class="block-header bg-gray-lighter">
-                <h3 class="block-title">Acciones</h3>
-            </div>
-            <div class="block-content block-content-full">
-              <%= partial :booking_management_actions %>
-            </div>
-          </div>
-        </div>
-      </div>
+                                                       multiple_rental_locations: multiple_rental_locations,
+                                                       driver_min_age_rules: driver_min_age_rules} %>
 
       <div class="row">
         <div class="col-lg-6">
@@ -214,7 +160,7 @@
         <div class="col-lg-12">
           <div class="block">
             <div class="block-header bg-gray-lighter">
-                <h3 class="block-title">Productos</h3>
+                <h3 class="block-title">Detalle de la reserva</h3>
             </div>
             <div class="block-content block-content-full">
             <%= partial :booking_management_detail, locals: {booking_item_family: booking_item_family,
@@ -271,7 +217,10 @@
         <div class="col-lg-12">
           <div class="block">
             <div class="block-header bg-gray-lighter">
-                <h3 class="block-title"><%= t.booking_management.form.charges_tab %></h3>
+                <div class="block-options-simple">
+                    <button id="new_charge" class="btn btn-xs btn-default" type="button"><%=t.booking_management.form.new_charge%></button>
+                </div>                 
+                <h3 class="block-title"><%= t.booking_management.form.charges_tab %><%=@addons_invoicing%></h3>
             </div>
             <div class="block-content block-content-full">
               <%= partial :booking_management_charges %>
@@ -280,15 +229,35 @@
         </div>
       </div>
 
+      <!-- Invoicing -->
+      <% if @addon_invoicing %>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="block">
+            <div class="block-header bg-gray-lighter">
+                <div class="block-options-simple">
+                    <button id="new_invoice_btn" class="btn btn-xs btn-default" type="button">Nueva factura</button>
+                </div>            
+                <h3 class="block-title">Facturación</h3>
+            </div>
+            <div id="invoicing_container" class="block-content block-content-full">
+            </div>
+          </div>
+        </div>
+      </div>
+      <% end %>
+
       <!-- Flight -->
       <% if booking_item_family.flight %>
       <div class="row">
-        <div class="block">
-          <div class="block-header bg-gray-lighter">
-              <h3 class="block-title"><%=t.booking_management.form.flight_title%></h3>
-          </div>
-          <div class="block-content block-content-full">
-            <%= partial :booking_management_flight %>
+        <div class="col-lg-12">
+          <div class="block">
+            <div class="block-header bg-gray-lighter">
+                <h3 class="block-title"><%=t.booking_management.form.flight_title%></h3>
+            </div>
+            <div class="block-content block-content-full">
+              <%= partial :booking_management_flight %>
+            </div>
           </div>
         </div>
       </div>
