--- a/views/config_booking_activities_notifications_customer_templates.erb
+++ b/views/config_booking_activities_notifications_customer_templates.erb
@@ -32,7 +32,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -52,7 +52,7 @@
                   <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="block block-bordered">
                       <div class="block-header bg-gray-lighter">
-                        <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                        <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                       </div>
                       <div class="block-content block-content-narrow">
                         <div id="request_notification_container">
@@ -68,7 +68,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -84,7 +84,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                                <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="confirmation_notification_container">
@@ -105,7 +105,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -121,7 +121,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                                <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="request_pay_now_notification_container">
@@ -141,7 +141,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
+                      <h3 class="block-title"><%=t.booking_settings.notifications.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -157,7 +157,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
+                                <h3 class="block-title"><%=t.booking_settings.notifications.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="pay_enabled_notification_container">
